--- a/package.json
+++ b/package.json
@@ -2,11 +2,41 @@
   "name": "./",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "commit": "cz"
+  },
   "private": true,
-  "dependencies": {},
   "devDependencies": {
+    "@nx/eslint-plugin": "16.6.0",
+    "@nx/js": "16.6.0",
+    "@nx/linter": "16.6.0",
+    "@nx/vite": "16.6.0",
+    "@types/node": "18.7.1",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "@vitejs/plugin-react": "~4.0.0",
+    "@vitest/coverage-c8": "~0.32.0",
+    "@vitest/ui": "~0.32.0",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "~8.15.0",
+    "eslint-config-prettier": "8.1.0",
+    "jsdom": "~22.1.0",
     "nx": "16.6.0",
-    "nx-cloud": "latest"
+    "nx-cloud": "latest",
+    "prettier": "^2.6.2",
+    "typescript": "~5.1.3",
+    "verdaccio": "^5.0.4",
+    "vite": "~4.3.9",
+    "vite-plugin-dts": "~2.3.0",
+    "vitest": "~0.32.0",
+    "zod": "3.21.4"
+  },
+  "nx": {
+    "includedScripts": []
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
