--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -12,6 +12,9 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 16
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
       - name: Install deps
         run: pnpm install --frozen-lockfile
 
