--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "private": true,
   "devDependencies": {
+    "@nx/devkit": "^16.6.0",
     "@nx/eslint-plugin": "16.6.0",
     "@nx/js": "16.6.0",
     "@nx/linter": "16.6.0",
