--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nx": "16.6.0",
     "nx-cloud": "latest",
     "prettier": "^2.6.2",
+    "tslib": "^2.6.1",
     "typescript": "~5.1.3",
     "verdaccio": "^5.0.4",
     "vite": "~4.3.9",
