chore(dependencies): normalize dependencies

--- a/packages/effector/package.json
+++ b/packages/effector/package.json
@@ -5,13 +5,6 @@
   "module": "./index.mjs",
   "typings": "./index.d.ts",
   "peerDependencies": {
-    "@simple-contract/core": "^0.0.4",
-    "effector": "^22.8.6",
-    "zod": "3.21.4"
-  },
-  "devDependencies": {
-    "@simple-contract/core": "^0.0.4",
-    "effector": "^22.8.6",
-    "zod": "3.21.4"
+    "effector": "^22.8.6"
   }
 }
