--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vitest/coverage-c8": "~0.32.0",
     "@vitest/ui": "~0.32.0",
     "cz-conventional-changelog": "^3.3.0",
+    "effector": "^22.8.6",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "jsdom": "~22.1.0",
